# yew_api_call

./: Cargo.toml  README.md  index.html
src/: main.rs
