[package]
name = "yew-starter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
serde = "1.0.144"
gloo-net = "0.4.0"
wasm-bindgen-futures = "0.4.37"
[dependencies.web-sys]
version = "0.3"
features = ["console", "Document", "Element", "Node", "Window"]
